--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "extra-entries",
-  "version": "0.0.1",
+  "name": "entries-extra",
+  "version": "0.2.3",
   "description": "Extra methods for entries.",
   "main": "index.js",
   "dependencies": {},
