--- a/package.json
+++ b/package.json
@@ -1,49 +1,50 @@
 {
-  "name": "entries-extra",
-  "version": "0.2.3",
+  "name": "extra-entries",
+  "version": "0.2.4",
   "description": "Extra methods for entries.",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "entries-equal": "^0.1.5",
-    "entries-every": "^0.1.6",
-    "entries-filter": "^0.1.5",
-    "entries-find": "^0.1.5",
-    "entries-findall": "^0.1.4",
-    "entries-findallkeys": "^0.1.2",
-    "entries-findkey": "^0.1.4",
-    "entries-foreach": "^0.1.5",
-    "entries-includes": "^0.1.3",
-    "entries-is": "^0.1.3",
-    "entries-join": "^0.1.4",
-    "entries-keyof": "^0.1.2",
-    "entries-keys": "^0.1.2",
-    "entries-keysof": "^0.1.2",
-    "entries-map": "^0.1.6",
-    "entries-reduce": "^0.1.7",
-    "entries-some": "^0.1.6",
-    "entries-values": "^0.1.2",
-    "iterable-concat": "^0.1.6",
-    "iterable-first": "^0.1.6",
-    "iterable-last": "^0.1.7",
-    "iterable-middle": "^0.1.4",
-    "iterable-size": "^0.1.4"
+    "@extra-entries/equal": "^1.0.1",
+    "@extra-entries/every": "^1.0.1",
+    "@extra-entries/filter": "^1.0.1",
+    "@extra-entries/find": "^1.0.1",
+    "@extra-entries/find-all": "^1.0.1",
+    "@extra-entries/find-all-keys": "^1.0.1",
+    "@extra-entries/find-key": "^1.0.1",
+    "@extra-entries/for-each": "^1.0.1",
+    "@extra-entries/includes": "^1.0.1",
+    "@extra-entries/is": "^1.0.1",
+    "@extra-entries/join": "^1.0.1",
+    "@extra-entries/key-of": "^1.0.1",
+    "@extra-entries/keys": "^1.0.1",
+    "@extra-entries/keys-of": "^1.0.1",
+    "@extra-entries/map": "^1.0.1",
+    "@extra-entries/reduce": "^1.0.1",
+    "@extra-entries/some": "^1.0.1",
+    "@extra-entries/values": "^1.0.1",
+    "@extra-iterable/concat": "^1.0.1",
+    "@extra-iterable/first": "^1.0.1",
+    "@extra-iterable/last": "^1.0.1",
+    "@extra-iterable/middle": "^1.0.1",
+    "@extra-iterable/size": "^1.0.1"
   },
   "scripts": {
     "test": "exit"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nodef/entries-extra.git"
+    "url": "git+https://github.com/extra-entries/extra-entries.git"
   },
   "keywords": [
+    "extra",
     "entries",
-    "extra"
+    "merferry"
   ],
   "author": "wolfram77@gmail.com",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/nodef/entries-extra/issues"
+    "url": "https://github.com/extra-entries/extra-entries/issues"
   },
-  "homepage": "https://github.com/nodef/entries-extra#readme"
+  "homepage": "https://github.com/extra-entries/extra-entries#readme"
 }
