--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extra-entries",
-  "version": "2.0.7",
+  "version": "2.0.8",
   "description": "Standard utility methods for Entries.",
   "main": "index.js",
   "module": "index.mjs",
@@ -18,13 +18,7 @@
   "runkitExampleFilename": "example.js",
   "keywords": [
     "extra",
-    "entries",
-    "standard",
-    "utility",
-    "method",
-    "manipulation",
-    "function",
-    "merferry"
+    "entries"
   ],
   "repository": {
     "type": "git",
