:watermelon: cool fruit auhtoring tool

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extra-entries",
-  "version": "2.0.85",
+  "version": "2.0.86",
   "description": "Standard utility methods for Entries.",
   "main": "index.js",
   "module": "index.mjs",
@@ -18,7 +18,69 @@
   "runkitExampleFilename": "example.js",
   "keywords": [
     "extra",
-    "entries"
+    "cartesianProduct",
+    "chunk",
+    "concat",
+    "count",
+    "countAs",
+    "difference",
+    "drop",
+    "entries",
+    "entry",
+    "every",
+    "filter",
+    "filterAt",
+    "find",
+    "findAll",
+    "flat",
+    "flatMap",
+    "forEach",
+    "fromLists",
+    "get",
+    "getAll",
+    "head",
+    "intersection",
+    "is",
+    "isDisjoint",
+    "isEmpty",
+    "isEntry",
+    "isKey",
+    "isSubmap",
+    "isValue",
+    "join",
+    "key",
+    "keys",
+    "length",
+    "map",
+    "max",
+    "min",
+    "partition",
+    "partitionAs",
+    "range",
+    "reduce",
+    "reject",
+    "rejectAt",
+    "remove",
+    "scanUntil",
+    "scanWhile",
+    "search",
+    "searchAll",
+    "searchValue",
+    "searchValueAll",
+    "set",
+    "shift",
+    "size",
+    "some",
+    "submap",
+    "submaps",
+    "swap",
+    "symmetricDifference",
+    "tail",
+    "take",
+    "union",
+    "unionKeys",
+    "value",
+    "values"
   ],
   "repository": {
     "type": "git",
