--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "extra-entries",
-  "version": "2.0.91",
-  "description": "Standard utility methods for Entries.",
+  "version": "2.0.92",
+  "description": "Entries is a list of key-value pairs, with unique keys.",
   "main": "index.js",
   "module": "index.mjs",
   "exports": {
