:coconut: chutney ;subset

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extra-entries",
-  "version": "2.1.15",
+  "version": "2.1.16",
   "description": "Entries is a list of key-value pairs, with unique keys.",
   "main": "index.js",
   "module": "index.mjs",
@@ -47,7 +47,7 @@
     "isEntry",
     "isEqual",
     "isKey",
-    "isSubmap",
+    "isSubset",
     "isValue",
     "join",
     "key",
@@ -73,8 +73,8 @@
     "shift",
     "size",
     "some",
-    "submap",
-    "submaps",
+    "subset",
+    "subsets",
     "swap",
     "symmetricDifference",
     "tail",
