:coconut: chutney wiki ;has*

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extra-entries",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Entries is a list of key-value pairs, with unique keys.",
   "main": "index.js",
   "module": "index.mjs",
@@ -39,16 +39,16 @@
     "fromLists",
     "get",
     "getAll",
+    "has",
+    "hasEntry",
+    "hasSubset",
+    "hasValue",
     "head",
     "intersection",
     "is",
     "isDisjoint",
     "isEmpty",
-    "isEntry",
     "isEqual",
-    "isKey",
-    "isSubset",
-    "isValue",
     "join",
     "key",
     "keys",
