--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extra-entries",
-  "version": "2.2.4",
+  "version": "2.2.5",
   "description": "Entries is a list of key-value pairs, with unique keys.",
   "main": "index.js",
   "module": "index.mjs",
@@ -39,8 +39,10 @@
     "fromLists",
     "get",
     "getAll",
+    "getPath",
     "has",
     "hasEntry",
+    "hasPath",
     "hasSubset",
     "hasValue",
     "head",
