:bus: update build scripts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extra-entries",
-  "version": "2.2.13",
+  "version": "2.2.14",
   "description": "Entries is a list of key-value pairs, with unique keys.",
   "main": "index.js",
   "module": "index.mjs",
@@ -9,83 +9,14 @@
     "import": "./index.mjs"
   },
   "scripts": {
-    "einit": "ebuild init",
-    "ecode": "ebuild update --docs false",
-    "eupdate": "ebuild update",
-    "escatter": "ebuild scatter",
-    "test": "exit"
+    "test": "exit",
+    "build": "ebuild export+main+example+wiki+readme --wikiExample=false --asciinema=false",
+    "deploy": "ebuild jsdoc+export+main+meta+example+github+publish"
   },
   "runkitExampleFilename": "example.js",
   "keywords": [
     "extra",
-    "entries",
-    "cartesianProduct",
-    "chunk",
-    "compare",
-    "concat",
-    "count",
-    "countAs",
-    "difference",
-    "drop",
-    "entry",
-    "every",
-    "filter",
-    "filterAt",
-    "find",
-    "findAll",
-    "flat",
-    "flatMap",
-    "forEach",
-    "fromLists",
-    "get",
-    "getAll",
-    "getPath",
-    "has",
-    "hasEntry",
-    "hasPath",
-    "hasSubset",
-    "hasValue",
-    "head",
-    "intersection",
-    "is",
-    "isDisjoint",
-    "isEmpty",
-    "isEqual",
-    "join",
-    "key",
-    "keys",
-    "length",
-    "map",
-    "max",
-    "min",
-    "partition",
-    "partitionAs",
-    "range",
-    "reduce",
-    "reject",
-    "rejectAt",
-    "remove",
-    "scanUntil",
-    "scanWhile",
-    "search",
-    "searchAll",
-    "searchValue",
-    "searchValueAll",
-    "set",
-    "shift",
-    "size",
-    "some",
-    "subset",
-    "subsets",
-    "swap",
-    "symmetricDifference",
-    "tail",
-    "take",
-    "union",
-    "unionKeys",
-    "value",
-    "values",
-    "zip"
+    "entries"
   ],
   "repository": {
     "type": "git",
